// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  my={1}
>
  <CenterSpinner />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loaded (pc) 1`] = `
<Fragment>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    title="トイレマップ"
  />
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "calc(100px - 66px)",
          "position": "relative",
          "width": "100px",
        }
      }
    >
      <ParkMap
        initZoom={2}
        park="L"
        setMap={[Function]}
      />
      <ForwardRef(Box)
        sx={
          Object {
            "left": "50%",
            "margin": 0,
            "position": "fixed",
            "top": 76,
            "transform": "translate(-50%, 0)",
            "width": "95%",
            "zIndex": 1000,
          }
        }
      >
        <ForwardRef(Box)
          sx={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.9)",
              "borderRadius": 1,
              "boxSizing": "border-box",
              "maxWidth": "800px",
              "mb": 1,
              "mx": "auto",
              "p": 1,
            }
          }
        >
          <ForwardRef(Grid)
            container={true}
            spacing={0}
          >
            <ForwardRef(Grid)
              item={true}
              pt={0.4}
              xs={1}
            >
              <NonStyleLink
                to="/special-maps/detail/0"
              >
                <ForwardRef(IconButton)
                  color="primary"
                >
                  <Memo(ForwardRef(HelpOutlineIcon)) />
                </ForwardRef(IconButton)>
              </NonStyleLink>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={10}
            >
              <ForwardRef(Typography)
                align="center"
                component="h2"
                py={1}
                variant="h6"
              >
                トイレマップ
              </ForwardRef(Typography)>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={1}
            />
          </ForwardRef(Grid)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(Box)
            display="inline-block"
          >
            <ParkSelectBox
              onChangePark={[Function]}
              park="L"
            />
          </ForwardRef(Box)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
      <LoadingProgressBar
        fetchingState="success"
        isMobile={false}
        loadedPages={0}
      />
    </ForwardRef(Box)>
  </GlobalMenu>
</Fragment>
`;

exports[`Shallow Snapshot Tests loaded 1`] = `
<Fragment>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    title="トイレマップ"
  />
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "calc(100px - 58px)",
          "position": "relative",
          "width": "100px",
        }
      }
    >
      <ParkMap
        initZoom={2}
        park="L"
        setMap={[Function]}
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          key="special-map--67.6875-140.75"
          map={
            Object {
              "invalidateSize": [MockFunction],
              "on": [MockFunction],
            }
          }
          popup={
            <React.Fragment>
              <ForwardRef(Typography)
                align="center"
                component="div"
                mb={2}
              >
                <Image
                  height="200px"
                  src="https://cdn-ak.f.st-hatena.com/images/fotolife/n/nats-co/20160323/20160323164220.jpg"
                />
              </ForwardRef(Typography)>
              <DynamicAlignedText
                component="div"
              >
                アリスモチーフのトイレです。トランプ模様の扉がかわいい。
              </DynamicAlignedText>
            </React.Fragment>
          }
          position={
            Object {
              "lat": -67.6875,
              "lng": 140.75,
            }
          }
          variant="blue"
          zIndexOffset={0}
        />
      </ParkMap>
      <ForwardRef(Box)
        sx={
          Object {
            "left": "50%",
            "margin": 0,
            "position": "fixed",
            "top": 68,
            "transform": "translate(-50%, 0)",
            "width": "95%",
            "zIndex": 1000,
          }
        }
      >
        <ForwardRef(Box)
          sx={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.9)",
              "borderRadius": 1,
              "boxSizing": "border-box",
              "maxWidth": "800px",
              "mb": 1,
              "mx": "auto",
              "p": 1,
            }
          }
        >
          <ForwardRef(Grid)
            container={true}
            spacing={0}
          >
            <ForwardRef(Grid)
              item={true}
              pt={0.4}
              xs={1}
            >
              <NonStyleLink
                to="/special-maps/detail/0"
              >
                <ForwardRef(IconButton)
                  color="primary"
                >
                  <Memo(ForwardRef(HelpOutlineIcon)) />
                </ForwardRef(IconButton)>
              </NonStyleLink>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={10}
            >
              <ForwardRef(Typography)
                align="center"
                component="h2"
                py={1}
                variant="h6"
              >
                トイレマップ
              </ForwardRef(Typography)>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={1}
            />
          </ForwardRef(Grid)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(Box)
            display="inline-block"
          >
            <ParkSelectBox
              onChangePark={[Function]}
              park="L"
            />
          </ForwardRef(Box)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
      <LoadingProgressBar
        fetchingState="success"
        isMobile={true}
        loadedPages={0}
      />
    </ForwardRef(Box)>
  </GlobalMenu>
</Fragment>
`;

exports[`Shallow Snapshot Tests loading markers 1`] = `
<Fragment>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    title="トイレマップ"
  />
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "calc(100px - 58px)",
          "position": "relative",
          "width": "100px",
        }
      }
    >
      <ParkMap
        initZoom={2}
        park="L"
        setMap={[Function]}
      />
      <ForwardRef(Box)
        sx={
          Object {
            "left": "50%",
            "margin": 0,
            "position": "fixed",
            "top": 68,
            "transform": "translate(-50%, 0)",
            "width": "95%",
            "zIndex": 1000,
          }
        }
      >
        <ForwardRef(Box)
          sx={
            Object {
              "backgroundColor": "rgba(255, 255, 255, 0.9)",
              "borderRadius": 1,
              "boxSizing": "border-box",
              "maxWidth": "800px",
              "mb": 1,
              "mx": "auto",
              "p": 1,
            }
          }
        >
          <ForwardRef(Grid)
            container={true}
            spacing={0}
          >
            <ForwardRef(Grid)
              item={true}
              pt={0.4}
              xs={1}
            >
              <NonStyleLink
                to="/special-maps/detail/0"
              >
                <ForwardRef(IconButton)
                  color="primary"
                >
                  <Memo(ForwardRef(HelpOutlineIcon)) />
                </ForwardRef(IconButton)>
              </NonStyleLink>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={10}
            >
              <ForwardRef(Typography)
                align="center"
                component="h2"
                py={1}
                variant="h6"
              >
                トイレマップ
              </ForwardRef(Typography)>
            </ForwardRef(Grid)>
            <ForwardRef(Grid)
              item={true}
              xs={1}
            />
          </ForwardRef(Grid)>
        </ForwardRef(Box)>
        <ForwardRef(Box)
          textAlign="right"
        >
          <ForwardRef(Box)
            display="inline-block"
          >
            <ParkSelectBox
              onChangePark={[Function]}
              park="L"
            />
          </ForwardRef(Box)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
      <LoadingProgressBar
        fetchingState="loading"
        isMobile={true}
        loadedPages={0}
      />
    </ForwardRef(Box)>
  </GlobalMenu>
</Fragment>
`;

exports[`Shallow Snapshot Tests without height 1`] = `
<ForwardRef(Box)
  my={1}
>
  <CenterSpinner />
</ForwardRef(Box)>
`;
